[tool.poetry]
name = "v3"
version = "0.1.0"
description = ""
authors = ["Khaliq Salawou <khaliqsalawoudeen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
google-api-python-client = "^2.131.0"
dateparser = "^1.2.0"
streamlit = "^1.35.0"
xlsxwriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
